
syntax = "proto3";

package java.test;

option java_multiple_files = true;
option java_package = "com.hyf.protobuf.test";
//option java_outer_classname = "AddressBookProto";

message Person {
  optional int32 id = 1;
  optional string name = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }
  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2;
  }
  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person person = 1;
}

